--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,47 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Itim:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
+body {
+  background: #184E77;
+  color: #76C893;
+  font-family: "Itim";
+}
 a {
-  color: inherit;
+  color: #333;
   text-decoration: none;
 }
-
-* {
-  box-sizing: border-box;
+.content {
+  max-width: 960px;
+  margin: 0 auto;
+}
+nav {
+  background: #184E77;
+  margin: 10px auto 40px;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-bottom: 1px solid #76C893;
+}
+nav a {
+  color: #76C893;
+  margin-left: 20px;
+  font-size: 30px;
+}
+.children {
+  text-align: center;
+  min-height: 500px;
+}
+footer {
+  display: block;
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 60px;
+  border-top: 1px solid #76C893;
+}
+footer a{
+  color: #76C893;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 20px;
 }
