--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 body {
-  background: #184E77;
-  color: #76C893;
+  background: #e9ecef;
+  color: #0077b6;
   font-family: "Itim";
 }
 a {
@@ -15,16 +15,15 @@ a {
   margin: 0 auto;
 }
 nav {
-  background: #184E77;
   margin: 10px auto 40px;
   padding: 10px 0;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  border-bottom: 1px solid #76C893;
+  border-bottom: 3px solid #0077b6;
 }
 nav a {
-  color: #76C893;
+  color: #0077b6;
   margin-left: 20px;
   font-size: 30px;
 }
@@ -37,11 +36,20 @@ footer {
   text-align: center;
   padding: 30px 0;
   margin-top: 60px;
-  border-top: 1px solid #76C893;
+  border-top: 3px solid #0077b6;
 }
 footer a{
-  color: #76C893;
+  color: #0077b6;
   margin-left: 10px;
   margin-right: 10px;
   font-size: 20px;
+}
+
+img {
+  /* background-image: radial-gradient(#0077b6 50%, #5cafdb 60%, white 70%); */
+  /* -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0))); */
+  mask-image: radial-gradient(rgba(0, 0, 0, 1.0), transparent 70%);
+  /* -webkit-mask-image: -webkit-gradient(linear, right top, right bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0))); */
+  /* mask-image: radial-gradient(#0077b6 50%, #5cafdb 60%, white 70%);  */
+  /* radial-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0)); */
 }
